--- a/MyCloset2/Base.lproj/Main.storyboard
+++ b/MyCloset2/Base.lproj/Main.storyboard
@@ -25,7 +25,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="300" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="EpC-sc-nrb">
-                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="mY1-05-2U9">
@@ -618,6 +618,7 @@
                         <segue destination="9eF-11-MbX" kind="relationship" relationship="viewControllers" id="eNK-UH-iwl"/>
                         <segue destination="IKR-wy-dNJ" kind="relationship" relationship="viewControllers" id="mIa-Nr-NIE"/>
                         <segue destination="VZs-4g-u4U" kind="relationship" relationship="viewControllers" id="Ll9-Wq-cyp"/>
+                        <segue destination="TJM-Ct-gNK" kind="relationship" relationship="viewControllers" id="Uvf-mw-QUY"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rng-gE-jVU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -1370,10 +1371,34 @@
             </objects>
             <point key="canvasLocation" x="6543" y="-391"/>
         </scene>
+        <!--その他-->
+        <scene sceneID="abI-Dl-dfq">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="TJM-Ct-gNK" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="その他" image="tabbar-icon-theOthers.png" id="VmI-Bg-oUA"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="n99-ep-98O">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="barTintColor" red="1" green="0.93128491349999998" blue="0.79172610320000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <textAttributes key="largeTitleTextAttributes">
+                            <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="qgv-o6-4uH" kind="relationship" relationship="rootViewController" id="8S0-ZH-ucM"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HYU-mN-JvP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2683" y="1021"/>
+        </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="N3p-Af-H2V"/>
-        <segue reference="iMi-RZ-AxA"/>
+        <segue reference="xtR-Kd-vjn"/>
+        <segue reference="a3l-7e-CX2"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="clothes-image.jpeg" width="275" height="183"/>
@@ -1383,6 +1408,7 @@
         <image name="tabbar-icon-bottoms.png" width="25" height="25"/>
         <image name="tabbar-icon-home.png" width="24" height="24"/>
         <image name="tabbar-icon-shoes.png" width="25" height="25"/>
+        <image name="tabbar-icon-theOthers.png" width="25" height="25"/>
         <image name="tabbar-icon-tops.png" width="24" height="24"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
