--- a/MyCloset2/Cell/ClothesTableViewCell.xib
+++ b/MyCloset2/Cell/ClothesTableViewCell.xib
@@ -127,6 +127,9 @@
                         <state key="normal" title="着用">
                             <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
+                        <connections>
+                            <action selector="putOnButton:" destination="iny-J9-g8S" eventType="touchUpInside" id="xZA-kv-q6v"/>
+                        </connections>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Ub-S4-BLj">
                         <rect key="frame" x="201" y="246" width="24" height="24"/>
@@ -137,6 +140,9 @@
                         <state key="normal" image="cancel-icon.png">
                             <color key="titleColor" systemColor="systemGray6Color"/>
                         </state>
+                        <connections>
+                            <action selector="cancelWithButton:" destination="iny-J9-g8S" eventType="touchUpInside" id="ayO-R5-wc2"/>
+                        </connections>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zwm-Mm-24I">
                         <rect key="frame" x="337" y="11" width="27" height="27"/>
@@ -145,6 +151,9 @@
                             <constraint firstAttribute="width" constant="27" id="VpK-0H-616"/>
                         </constraints>
                         <state key="normal" image="icon-delete.png"/>
+                        <connections>
+                            <action selector="deleteWithButton:" destination="iny-J9-g8S" eventType="touchUpInside" id="RXJ-5K-w2s"/>
+                        </connections>
                     </button>
                 </subviews>
                 <color key="backgroundColor" red="1" green="0.95938189650000005" blue="0.86264489280000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -185,10 +194,13 @@
             <viewLayoutGuide key="safeArea" id="a4O-kp-DOS"/>
             <connections>
                 <outlet property="buyDateLabel" destination="lK0-jM-OuG" id="goG-gy-Kfr"/>
+                <outlet property="cancelButton" destination="7Ub-S4-BLj" id="3x8-J1-bDx"/>
                 <outlet property="clothesImageView" destination="ak9-r3-0tY" id="Q8T-gn-eE0"/>
                 <outlet property="commentTextView" destination="WGi-sE-3c7" id="nYm-TN-abx"/>
+                <outlet property="deleteButton" destination="Zwm-Mm-24I" id="8xG-86-uLq"/>
                 <outlet property="nameLabel" destination="jHA-yS-acL" id="TJP-G0-8II"/>
                 <outlet property="priceLabel" destination="kds-AO-0md" id="zf2-dh-jfp"/>
+                <outlet property="putOnButton" destination="Wli-QL-0wB" id="0OB-Dn-DcB"/>
                 <outlet property="putOnCountLabel" destination="1yK-Od-My5" id="5xk-Da-LYp"/>
             </connections>
             <point key="canvasLocation" x="158.69565217391306" y="33.482142857142854"/>
