検索条件画面作成

--- a/MyCloset2/Base.lproj/Main.storyboard
+++ b/MyCloset2/Base.lproj/Main.storyboard
@@ -170,7 +170,7 @@
         <!--検索-->
         <scene sceneID="QVO-KE-bhT">
             <objects>
-                <viewController id="4fv-uv-tyQ" customClass="SearchViewController" customModule="MyCloset2" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="4fv-uv-tyQ" customClass="SelectCategoryViewController" customModule="MyCloset2" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="lAH-MP-cmu">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
