--- a/MyCloset2/Base.lproj/Main.storyboard
+++ b/MyCloset2/Base.lproj/Main.storyboard
@@ -1067,7 +1067,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="IZo-U0-7r0">
-                                <rect key="frame" x="0.0" y="88" width="414" height="771"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="437"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
@@ -1090,6 +1090,17 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vll-ZL-3C9">
+                                <rect key="frame" x="180" y="579" width="55" height="32"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="戻る">
+                                    <fontDescription key="titleFontDescription" type="system" pointSize="15"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="back" destination="InO-F8-0O4" eventType="touchUpInside" id="bIQ-Y0-lz5"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="ORc-d6-bne"/>
                         <color key="backgroundColor" red="0.99217849970000005" green="0.84218937159999996" blue="0.58835858110000006" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -1099,6 +1110,7 @@
                         <barButtonItem key="rightBarButtonItem" title="次へ" id="G5t-zh-xyI"/>
                     </navigationItem>
                     <connections>
+                        <outlet property="cancelButton" destination="Vll-ZL-3C9" id="M1o-G9-ddP"/>
                         <outlet property="tableView" destination="IZo-U0-7r0" id="emQ-Ca-VBe"/>
                         <segue destination="QpM-tU-WBp" kind="show" identifier="toResult" id="8us-Fe-WoA"/>
                     </connections>
