--- a/MyCloset2/Cell/ClothesTableViewCell.xib
+++ b/MyCloset2/Cell/ClothesTableViewCell.xib
@@ -155,6 +155,14 @@
                             <action selector="deleteWithButton:" destination="iny-J9-g8S" eventType="touchUpInside" id="RXJ-5K-w2s"/>
                         </connections>
                     </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lPc-VW-O5V">
+                        <rect key="frame" x="260" y="248" width="95" height="21"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <fontDescription key="fontDescription" name="HonyaJi-Re" family="HonyaJi-Re" pointSize="12"/>
+                        <color key="textColor" systemColor="systemRedColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <color key="backgroundColor" red="1" green="0.95938189650000005" blue="0.86264489280000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
@@ -202,6 +210,7 @@
                 <outlet property="priceLabel" destination="kds-AO-0md" id="zf2-dh-jfp"/>
                 <outlet property="putOnButton" destination="Wli-QL-0wB" id="0OB-Dn-DcB"/>
                 <outlet property="putOnCountLabel" destination="1yK-Od-My5" id="5xk-Da-LYp"/>
+                <outlet property="warningLabel" destination="lPc-VW-O5V" id="2n0-j8-JgB"/>
             </connections>
             <point key="canvasLocation" x="158.69565217391306" y="33.482142857142854"/>
         </tableViewCell>
@@ -217,6 +226,9 @@
         </systemColor>
         <systemColor name="systemGray6Color">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
