--- a/MyCloset2/Base.lproj/Main.storyboard
+++ b/MyCloset2/Base.lproj/Main.storyboard
@@ -210,7 +210,7 @@
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l2j-d9-XsZ">
                                 <rect key="frame" x="132" y="618" width="150" height="57"/>
-                                <color key="backgroundColor" systemColor="systemCyanColor"/>
+                                <color key="backgroundColor" systemColor="systemOrangeColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="4tc-0B-BSM"/>
                                     <constraint firstAttribute="height" constant="57" id="dfh-hR-8ds"/>
